--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^10.12.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
